[gd_scene load_steps=6 format=3 uid="uid://cikbcugwx66yx"]

[ext_resource type="Script" path="res://main.gd" id="1_fo5kv"]
[ext_resource type="PackedScene" uid="uid://l4t4mmvvakhq" path="res://player.tscn" id="1_yt3n4"]
[ext_resource type="PackedScene" uid="uid://ck32neeyero1m" path="res://rigid_body_2d.tscn" id="2_fip0t"]
[ext_resource type="PackedScene" uid="uid://c80rhv7a31hkp" path="res://hud.tscn" id="4_5e154"]

[sub_resource type="Curve2D" id="Curve2D_t8cev"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -3, -3, 0, 0, 0, 0, 1280, 0, 0, 0, 0, 0, 1279, 717, 0, 0, 0, 0, -4, 713, 0, 0, 0, 0, -3, -3)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_fo5kv")
mob_scene = ExtResource("2_fip0t")

[node name="Player" parent="." instance=ExtResource("1_yt3n4")]
visible = false

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(640, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_t8cev")

[node name="MobFollowPath" type="PathFollow2D" parent="MobPath"]
position = Vector2(-3, -3)
rotation = 0.00233827

[node name="HUD" parent="." instance=ExtResource("4_5e154")]

[connection signal="costumeHit" from="Player" to="." method="meet_with_a_purple_guy"]
[connection signal="costumeHurt" from="Player" to="." method="hurted_by_a_costumed_man"]
[connection signal="hit" from="Player" to="." method="hurted_by_man"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
